welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:5: error: not found: value getLargeur
  do {if(getX==getLargeur-1){colonne=0;ligne=ligne+1;setPos(colonne,ligne)}
               ^